fix #239 - add options to specify VS path